# Cpp-Kurs-2025-Uni-Munster-Abgabe

./: .gitignore  Credits.md  Makefile  README.md
Abgabe/: CMakeLists.txt  Makefile  README.md
Abgabe/src/: CMakeLists.h  CMakeLists.txt  main.cpp
Abgabe/src/assets/: AssetLoader.cpp  AssetLoader.h  AssetMappings.h
Abgabe/src/control/: AlienBulletControl.cpp  AlienBulletControl.h  AlienControl.cpp  AlienControl.h  BulletControl.cpp  BulletControl.h  Game.cpp  Game.hpp  LevelControl.cpp  LevelControl.h  MeteorControl.cpp  MeteorControl.h  ParticleControl.cpp  ParticleControl.h  PlayerControl.cpp  PlayerControl.h  UIControl.cpp  UIControl.h
Abgabe/src/control/controls/: AlienBulletControl.cpp  AlienBulletControl.h  AlienControl.cpp  AlienControl.h  BulletControl.cpp  BulletControl.h  LevelControl.cpp  LevelControl.h  MeteorControl.cpp  MeteorControl.h  ParticleControl.cpp  ParticleControl.h  PlayerControl.cpp  PlayerControl.h  UIControl.cpp  UIControl.h
Abgabe/src/control/properties/: PropDrawable.cpp  PropDrawable.h
Abgabe/src/model/: Alien.cpp  Alien.h  AlienBullet.cpp  AlienBullet.h  AlienShield.cpp  AlienShield.h  Background.cpp  Background.h  Bullet.cpp  Bullet.h  Constants.hpp  Deathmessage.cpp  Deathmessage.h  Healthbar.cpp  Healthbar.h  Meteor.cpp  Meteor.h  Particle.cpp  Particle.h  Player.cpp  Player.h  Scoreboard.cpp  Scoreboard.h
Abgabe/src/model/game/: Alien.cpp  Alien.h  AlienBullet.cpp  AlienBullet.h  AlienShield.cpp  AlienShield.h  Bullet.cpp  Bullet.h  Meteor.cpp  Particle.h  Player.cpp  Player.h  Shield.cpp  Shield.h
Abgabe/src/model/interface/: Background.cpp  Background.h  Deathmessage.cpp  Deathmessage.h  Healthbar.cpp  Healthbar.h  Shieldbar.cpp  Shieldbar.h
Abgabe/src/model/properties/: PropAnimatedSprite.cpp  PropAnimatedSprite.h  PropMoveable.cpp  PropMoveable.h  PropSprite.cpp  PropSprite.h
Abgabe/src/view/: Layer.cpp  Layer.hpp
Abgabe/test/: CMakeLists.txt  CommonMockClasses.cpp  GameTest.cpp  MockClasses.cpp
Abgabe/test/control/: AlienBulletControlTest.cpp  AlienControlTest.cpp  BulletControlTest.cpp  LevelControlTest.cpp  MeteorControlTest.cpp  MockControl.cpp  ParticleControlTest.cpp  PlayerControlTest.cpp
Abgabe/test/model/: AlienBulletModelTest.cpp  AlienBulletTest.cpp  AlienTest.cpp  BulletTest.cpp  MeteorTest.cpp  ParticleTest.cpp  PlayerTest.cpp
Abgabe/test/model/interface/: BackgroundTest.cpp  CommonInterfaceTest.cpp
Abgabe/test/model/properties/: PropAnimatedSpriteTest.cpp  PropMoveableTest.cpp  PropSpriteTest.cpp
src/: CMakeLists.h  main.cpp
src/assets/: AssetMappings.h
src/control/: Game.cpp  Game.hpp
src/control/controls/: AlienBulletControl.cpp  AlienControl.cpp  AlienControl.h  BulletControl.cpp  BulletControl.h  LevelControl.cpp  MeteorControl.h  ParticleControl.cpp  ParticleControl.h  PlayerControl.cpp  PlayerControl.h  UIControl.h
src/control/properties/: PropDrawable.h
src/model/: Constants.hpp
src/model/game/: Alien.cpp  Alien.h  Bullet.h  Meteor.cpp  Meteor.h  Particle.cpp  Player.cpp  Player.h
src/model/interface/: Background.cpp  Background.h  Healthbar.cpp  Scoreboard.cpp  Scoreboard.h  Shieldbar.h
src/model/properties/: PropMoveable.cpp  PropMoveable.h  PropSprite.cpp  PropSprite.h
src/utils/: Directions.h
test/: CMakeLists.txt
test/control/: AlienBulletControlTest.cpp  AlienControlTest.cpp  LevelControlTest.cpp  UiControlTest.cpp
test/model/: AlienBulletTest.cpp  AlienTest.cpp  BulletTest.cpp  MeteorTest.cpp  ParticleTest.cpp
test/model/interface/: CommonInterfaceTest.cpp
test/model/properties/: PropSpriteTest.cpp
